# sinbaram-clone

./: .gitignore  pyproject.toml  todo.md
answers/: admin.py  models.py  serializer.py
answers/migrations/: 0001_initial.py
common/: models.py
config/: settings.py  urls.py
fabrics/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
fabrics/migrations/: 0001_initial.py
medias/: admin.py  models.py  serializer.py  urls.py  views.py
medias/migrations/: 0001_initial.py
qnas/: admin.py  models.py  serializer.py
qnas/migrations/: 0001_initial.py  0002_qna_replied.py  0003_remove_qna_replied.py
reviews/: admin.py  models.py  serializer.py
reviews/migrations/: 0001_initial.py  0002_alter_review_fabric.py  0003_alter_review_fabric.py  0004_alter_review_payload.py  0005_alter_review_payload.py
users/: admin.py  models.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py  0003_alter_user_avatar_alter_user_name.py  0004_alter_user_name.py
wishlists/: admin.py  models.py  serializer.py  urls.py  views.py
wishlists/migrations/: 0001_initial.py
