[tool.poetry]
name = "sinbaram-clone"
version = "0.1.0"
description = ""
authors = ["Giheon <74302278+Dockerel@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sinbaram_clone"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
environ = "^1.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
